crates/sdk-core/tests/workflows_trybuild/mut_query_fail.stderr
error: #[query] methods must use `&self` as the receiver (not `&mut self`) - queries are read-only
  --> tests/workflows_trybuild/mut_query_fail.rs:15:22
   |
15 |     pub fn get_value(&mut self, _ctx: &WfContext) -> u32 {
   |                      ^^^^^^^^^

warning: unused imports: `WfContext`, `WfExitValue`, and `WorkflowResult`
 --> tests/workflows_trybuild/mut_query_fail.rs:2:22
  |
2 | use temporalio_sdk::{WfContext, WfExitValue, WorkflowResult};
  |                      ^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
